# ngmi

./: CMakeLists.txt  LICENSE  README.md  implementation_plan.md
alexia/: CMakeLists.txt  chardisp.c  main.c  platformio.ini  seg7.c  seg7.h  simon_says.c  simon_says.h  timer_module.c  timer_module.h  tm1637.c  tm1637.h
alexia/.claude/: settings.local.json
celine/: button.c  button.h  chardisp.c  chardisp.h  display.c  main.c  mfrc522.c  mfrc522.h  platformio.ini  simon_says.c  simon_says.h  timer.c  timer.h
common/: common.h
final/: audio.c  audio.h  button.c  button.h  chardisp.c  chardisp.h  display.c  main.c  peer_link.c  peer_link.h  platformio.ini  simon_says.c  simon_says.h  timer.c  timer.h
krishy/: krishy_notes.txt
krishy/blast_gauge/src/: blast_gauge.c
krishy/morse/esp32_gesture_sensor/: platformio.ini
krishy/morse/esp32_gesture_sensor/src/: main.cpp
krishy/morse/rp2350_proton_game/src/: morse_game.c
mk77/: mk_notes.txt  platformio.ini
mk77/src/: blast_gauge.c  blast_gauge.h  display.c  display.h  game.c  game.h  inputs.c  inputs.h  led.c  led.h  link.c  link.h  main.c  waves.c  waves.h
myles/: CMakeLists.txt  audio.c  audio.h  display.c  display.h  game.c  game.h  inputs.c  inputs.h  led.c  led.h  main.c  platformio.ini  waves.c  waves.h
